// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webex Local Media component snapshot matches snapshot of disabled local video 1`] = `
<div
  className="wxc-local-media wxc-local-media-no-media"
>
  <WebexAvatar
    displayStatus={false}
    personID="default"
  />
</div>
`;

exports[`Webex Local Media component snapshot matches snapshot of local video 1`] = `
<div
  className="wxc-local-media"
>
  <video
    autoPlay={true}
    playsInline={true}
  />
</div>
`;

exports[`Webex Local Media component snapshot matches snapshot of local video with custom CSS class 1`] = `
<div
  className="wxc-local-media wxc-local-media-no-media my-custom-class"
>
  <WebexAvatar
    displayStatus={false}
    personID="default"
  />
</div>
`;
